# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

#################################group#########################################
group("fuzztest") {
  testonly = true
  if (os_level == "standard") {
    deps = [
      "./cmabort_fuzzer:fuzztest",
      "./cmcallinggetappcertlist_fuzzer:fuzztest",
      "./cmfinish_fuzzer:fuzztest",
      "./cmgetappcert_fuzzer:fuzztest",
      "./cmgetappcertlist_fuzzer:fuzztest",
      "./cmgetauthorizedapplist_fuzzer:fuzztest",
      "./cmgetcertinfo_fuzzer:fuzztest",
      "./cmgetcertlist_fuzzer:fuzztest",
      "./cmgetusercacertlist_fuzzer:fuzztest",
      "./cmgetusercertinfo_fuzzer:fuzztest",
      "./cmgetusercertlist_fuzzer:fuzztest",
      "./cmgrantappcertificate_fuzzer:fuzztest",
      "./cminit_fuzzer:fuzztest",
      "./cminstallappcert_fuzzer:fuzztest",
      "./cminstallappcertex_fuzzer:fuzztest",
      "./cminstallsystemappcert_fuzzer:fuzztest",
      "./cminstallusertrustedcert_fuzzer:fuzztest",
      "./cmisauthorizedapp_fuzzer:fuzztest",
      "./cmremovegrantedapp_fuzzer:fuzztest",
      "./cmsendrequest_fuzzer:fuzztest",
      "./cmsetcertstatus_fuzzer:fuzztest",
      "./cmsetusercertstatus_fuzzer:fuzztest",
      "./cmuninstallallappcert_fuzzer:fuzztest",
      "./cmuninstallallusertrustedcert_fuzzer:fuzztest",
      "./cmuninstallappcert_fuzzer:fuzztest",
      "./cmuninstallusertrustedcert_fuzzer:fuzztest",
      "./cmupdate_fuzzer:fuzztest",
    ]

    deps += [
      "./cminstallusertrustedp7bcert_fuzzer:fuzztest",
      "./cmipcserviceabort_fuzzer:fuzztest",
      "./cmipcservicefinish_fuzzer:fuzztest",
      "./cmipcservicegetappcert_fuzzer:fuzztest",
      "./cmipcservicegetappcertlist_fuzzer:fuzztest",
      "./cmipcservicegetauthorizedapplist_fuzzer:fuzztest",
      "./cmipcservicegetcallingappcertlist_fuzzer:fuzztest",
      "./cmipcservicegetcertificateinfo_fuzzer:fuzztest",
      "./cmipcservicegetcertificatelist_fuzzer:fuzztest",
      "./cmipcservicegetusercertinfo_fuzzer:fuzztest",
      "./cmipcservicegetusercertlist_fuzzer:fuzztest",
      "./cmipcservicegrantappcertificate_fuzzer:fuzztest",
      "./cmipcserviceinit_fuzzer:fuzztest",
      "./cmipcserviceinstallappcert_fuzzer:fuzztest",
      "./cmipcserviceinstallusercert_fuzzer:fuzztest",
      "./cmipcserviceisauthorizedapp_fuzzer:fuzztest",
      "./cmipcserviceremovegrantedapp_fuzzer:fuzztest",
      "./cmipcservicesetcertstatus_fuzzer:fuzztest",
      "./cmipcservicesetusercertstatus_fuzzer:fuzztest",
      "./cmipcserviceuninstallallappcert_fuzzer:fuzztest",
      "./cmipcserviceuninstallallusercert_fuzzer:fuzztest",
      "./cmipcserviceuninstallappcert_fuzzer:fuzztest",
      "./cmipcserviceuninstallusercert_fuzzer:fuzztest",
      "./cmipcserviceupdate_fuzzer:fuzztest",
      "./cmonremoterequest_fuzzer:fuzztest",
    ]

    deps += [
      "./cmappcert_fuzzer:fuzztest",
      "./cmsystemtrustedstore_fuzzer:fuzztest",
      "./cmusertrustedstore_fuzzer:fuzztest",
      "./cmgetfilepath_fuzzer:fuzztest",
      "./cmgetcertorcredcount_fuzzer:fuzztest",
      "./cmgetdisplaynamebyuri_fuzzer:fuzztest",
      "./cmremoveappcert_fuzzer:fuzztest",
      "./cmservicegetappcertlist_fuzzer:fuzztest",
      "./cmrdbinsertcertproperty_fuzzer:fuzztest",
      "./cmstoreusercert_fuzzer:fuzztest",
      "./cmremoveusercert_fuzzer:fuzztest",
      "./cmremovebackupusercert_fuzzer:fuzztest",
      "./cmgetobjnamefromcertdata_fuzzer:fuzztest",
      "./cminstallappcertpro_fuzzer:fuzztest",
      "./cmaddauthuid_fuzzer:fuzztest",
      "./cmremoveauthuidbyuserid_fuzzer:fuzztest",
      "./cmauthgrantappcertificate_fuzzer:fuzztest",
      "./cmcheckandgetcommonuri_fuzzer:fuzztest",
      "./cmkeyopimportkey_fuzzer:fuzztest",
      "./cmkeyopprocess_fuzzer:fuzztest",
      "./cmservicinstallappcert_fuzzer:fuzztest",
      "./cmservicegetappcert_fuzzer:fuzztest",
      "./cmserviceinit_fuzzer:fuzztest",
      "./cmservicegetcertinfo_fuzzer:fuzztest",
      "./cminstallusercert_fuzzer:fuzztest",
      "./cmrmusercert_fuzzer:fuzztest",
      "./cmcreatesession_fuzzer:fuzztest",
      "./cmstoragegetappcert_fuzzer:fuzztest",
      "./cmgetcertconfpath_fuzzer:fuzztest",
      "./cmgetcertbackupdir_fuzzer:fuzztest",
      "./cmiscertneedbackup_fuzzer:fuzztest",
      "./cmreadcertdata_fuzzer:fuzztest",
      "./certmanagerfreeuri_fuzzer:fuzztest",
      "./certmanagergetuidfromuri_fuzzer:fuzztest",
      "./cmconstructcommonuri_fuzzer:fuzztest",
      "./cmgetcertmanagerappuid_fuzzer:fuzztest",
      "./cminsertcertproperty_fuzzer:fuzztest",
      "./cmdeletecertproperty_fuzzer:fuzztest",
      "./cmgetcertbackupfilepath_fuzzer:fuzztest",
      "./cmx509topem_fuzzer:fuzztest",
      "./cmremoveauthuid_fuzzer:fuzztest",
      "./cmgetnameencode_fuzzer:fuzztest",
      "./cmgetrandom_fuzzer:fuzztest",
      "./cmparsepkcs12cert_fuzzer:fuzztest",
      "./cmonstop_fuzzer:fuzztest",
      "./cmx509_fuzzer:fuzztest",
      "./cmpfx_fuzzer:fuzztest",
      "./cmcertmanager_fuzzer:fuzztest",
      "./cmauthlistmgr_fuzzer:fuzztest",
      "./cmcertmanagercheck_fuzzer:fuzztest",
      "./cmauthmgr_fuzzer:fuzztest",
      "./cmcertmanagerfile_fuzzer:fuzztest",
      "./cmcertmanagerupdateflag_fuzzer:fuzztest",
      "./cmcertmanagerservice_fuzzer:fuzztest",
      "./cmcertcommon_fuzzer:fuzztest",
      "./cmcertmanagerquery_fuzzer:fuzztest",

    ]
  }
}
