# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "cert_manager_standard/cert_manager_standard_test"

ohos_unittest("cert_hisysevent_test") {
  module_out_path = module_output_path

  sources = [
    "src/cm_hisysevent_test.cpp",
    "src/cm_hisysevent_test_common.cpp",
  ]

  defines = [
    "L2_STANDARD",
    "_CM_LOG_ENABLE_",
  ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "include",
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main/common/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
  ]

  deps = [
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main:cert_manager_standard_frameworks",
    "//base/security/certificate_manager/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
  ]

  external_deps = [
    "hisysevent_native:libhisysevent",
    "hisysevent_native:libhisyseventmanager",
  ]
}
