# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("certmanager") {
  sanitize = {
    cfi = true
    debug = false
    blocklist = "//base/security/certificate_manager/cfi_blocklist.txt"
  }
  defines = [
    "L2_STANDARD",
    "_HARDWARE_ROOT_KEY_",
    "_CM_LOG_ENABLE_",
  ]

  include_dirs = [
    "//base/security/certificate_manager/interfaces/innerkits/cert_manager_standard/main/include",
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main/common/include",
    "include",
  ]

  sources = [
    "src/cm_napi.cpp",
    "src/cm_napi_common.cpp",
    "src/cm_napi_get_app_cert_info.cpp",
    "src/cm_napi_get_app_cert_info_common.cpp",
    "src/cm_napi_get_app_cert_list.cpp",
    "src/cm_napi_get_app_cert_list_common.cpp",
    "src/cm_napi_get_system_cert_info.cpp",
    "src/cm_napi_get_system_cert_list.cpp",
    "src/cm_napi_grant.cpp",
    "src/cm_napi_install_app_cert.cpp",
    "src/cm_napi_install_app_cert_common.cpp",
    "src/cm_napi_set_cert_status.cpp",
    "src/cm_napi_sign_verify.cpp",
    "src/cm_napi_uninstall_all_app_cert.cpp",
    "src/cm_napi_uninstall_app_cert.cpp",
    "src/cm_napi_uninstall_app_cert_common.cpp",
    "src/cm_napi_user_trusted_cert.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "certificate_manager:cert_manager_sdk",
    "napi:ace_napi",
  ]
  cflags_cc = [
    "-Wall",
    "-Werror",
  ]
  deps = []

  relative_install_dir = "module/security"
  subsystem_name = "security"
  part_name = "certificate_manager"
}
