# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/certificate_manager/cert_manager.gni")
import("//build/config/features.gni")
import("//build/test.gni")

module_output_path = "certificate_manager/certificate_manager"

##############################fuzztest##########################################
ohos_fuzztest("CmCertManagerQueryFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${cert_manager_root_dir}/test/fuzz_test/cmcertmanagerquery_fuzzer"

  include_dirs = [
    "${cert_manager_root_dir}/test/unittest/module_test/include",
    "../../mocks/hks_api/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
  "cmcertmanagerquery_fuzzer.cpp",
   "../../mocks/hks_api/src/hks_api.c",
   "../../mocks/hks_api/src/hks_param.c",
   ]
  deps = [
    "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
    "${cert_manager_root_dir}/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
    "${cert_manager_root_dir}/test/fuzz_test/fuzz_test_common:libcert_manager_fuzz_test_common_static",
    "${cert_manager_root_dir}/services/cert_manager_standard/cert_manager_engine/main/core:cert_manager_engine_core_standard",
    "${cert_manager_root_dir}/services/cert_manager_standard/cert_manager_engine/main/rdb:libcert_manager_rdb_static",

  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "cJSON:cjson_static",
    "c_utils:utils",
    "ipc:ipc_core",
    "selinux_adapter:librestorecon",
    "openssl:libcrypto_shared",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":CmCertManagerQueryFuzzTest",
  ]
}
###############################################################################
