# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

module_output_path = "cert_manager_standard/cert_manager_standard_test"

##############################fuzztest##########################################
ohos_fuzztest("CmGetCertInfoFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/security/certificate_manager/test/fuzz_test/cmgetcertinfo_fuzzer"

  include_dirs = [
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main/common/include",
    "//base/security/certificate_manager/test/unittest/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "//base/security/certificate_manager/test/unittest/src/cm_test_common.cpp",
    "cmgetcertinfo_fuzzer.cpp",
  ]
  deps = [
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//base/security/certificate_manager/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
    "//base/security/certificate_manager/test/fuzz_test/fuzz_test_common:libcert_manager_fuzz_test_common_static",
  ]
  external_deps = [ "c_utils:utils" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":CmGetCertInfoFuzzTest",
  ]
}
###############################################################################
