# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

module_output_path = "certificate_manager/certificate_manager"

##############################fuzztest##########################################
ohos_fuzztest("CmIpcServiceSetUserCertStatusFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "../../../test/fuzz_test/cmipcservicesetusercertstatus_fuzzer"

  include_dirs = [
    "../../../frameworks/cert_manager_standard/main/common/include",
    "../../../interfaces/innerkits/cert_manager_standard/main/include",
    "../../../services/cert_manager_standard/cert_manager_service/main/os_dependency/idl/cm_ipc",
    "../../../test/unittest/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "../../../test/unittest/src/cm_test_common.cpp",
    "cmipcservicesetusercertstatus_fuzzer.cpp",
  ]
  deps = [
    "../../../services/cert_manager_standard:cert_manager_service",
    "../../../test/fuzz_test/fuzz_test_common:libcert_manager_fuzz_test_common_static",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":CmIpcServiceSetUserCertStatusFuzzTest",
  ]
}
###############################################################################
