# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "cert_manager_standard/cert_manager_standard_test"

ohos_unittest("cm_module_test") {
  module_out_path = module_output_path
  sources = [
    "src/cm_cert_parse_test.cpp",
    "src/cm_log_test.cpp",
    "src/cm_param_test.cpp",
  ]

  include_dirs = [
    "//third_party/bounds_checking_function/include",
    "//third_party/openssl/include",
    "include",
    "../include",
  ]
  cflags_cc = [
    "-Wall",
    "-Werror",
  ]
  cflags = cflags_cc
  deps = [
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main:cert_manager_standard_frameworks",
    "//base/security/certificate_manager/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_shared",
  ]
  defines = [ "_CM_LOG_ENABLE_" ]
  external_deps = [ "c_utils:utils" ]
}
