# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "cert_manager_standard/cert_manager_standard_test"

ohos_unittest("cm_multi_thread_test") {
  module_out_path = module_output_path
  sources = [
    "../src/cm_test_common.cpp",
    "src/cm_app_cert_multi_thread_test.cpp",
    "src/cm_get_auth_list_multi_thread_test.cpp",
    "src/cm_grant_multi_thread_test.cpp",
    "src/cm_remove_grant_multi_thread_test.cpp",
  ]

  include_dirs = [ "../include" ]
  cflags_cc = [
    "-Wall",
    "-Werror",
  ]
  cflags = cflags_cc
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }

  deps = [
    "../../../frameworks/cert_manager_standard/main:cert_manager_standard_frameworks",
    "../../../interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
  ]
  defines = [ "_CM_LOG_ENABLE_" ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bounds_checking_function:libsec_static",
    "c_utils:utils",
    "googletest:gtest",
  ]
}
