# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("cert_manager_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("libcert_manager_common_standard_static") {
  subsystem_name = "security"
  part_name = "certificate_manager"
  defines = [
    "L2_STANDARD",
    "_CM_LOG_ENABLE_",
  ]
  public_configs =
      [ ":cert_manager_config" ]  # Share include files for other gn when deps.

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//third_party/openssl/include",
  ]

  sources = [
    "src/cm_param.c",
    "src/cm_pfx.c",
    "src/cm_x509.c",
  ]

  deps = [ "//third_party/openssl:libcrypto_shared" ]
  external_deps = [
    "c_utils:utils",
    "huks:libhukssdk",
  ]
  cflags = [
    "-DHILOG_ENABLE",
    "-Wall",
    "-Werror",
  ]
  complete_static_lib = true
}
