# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("cert_manager_config") {
  include_dirs = [ "include" ]
}

if (os_level == "standard") {
  ohos_shared_library("cert_manager_sdk") {
    branch_protector_ret = "pac_ret"
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      boundary_sanitize = true
      debug = false
      integer_overflow = true
      ubsan = true
    }
    subsystem_name = "security"
    innerapi_tags = [
      "platformsdk",
      "chipsetsdk",
    ]
    part_name = "certificate_manager"
    public_configs = [ ":cert_manager_config" ]
    defines = [
      "L2_STANDARD",
      "_HARDWARE_ROOT_KEY_",
      "_CM_LOG_ENABLE_",
    ]

    sources = [ "src/cert_manager_api.c" ]

    cflags = [
      "-DHILOG_ENABLE",
      "-Wall",
      "-Werror",
    ]
    deps = [ "../../../../frameworks/cert_manager_standard/main:cert_manager_standard_frameworks" ]

    external_deps = [ "hilog:libhilog" ]
  }
}
#if (os_level == "small" || os_level == "mini") {
#  group("libcert_managersdk") {
#  }
#}
