# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("cert_manager_config") {
  include_dirs = [ "include" ]
}
ohos_shared_library("cert_manager_engine_core_standard") {
  sanitize = {
    cfi = true
    debug = false
    blocklist = "//base/security/certificate_manager/cfi_blocklist.txt"
  }
  subsystem_name = "security"
  part_name = "certificate_manager"
  public_configs = [ ":cert_manager_config" ]
  defines = [
    "L2_STANDARD",
    "_CM_LOG_ENABLE_",
  ]
  include_dirs = [
    "//base/security/certificate_manager/services/cert_manager_standard/cert_manager_engine/main/core/include",
    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main/common/include",
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main/os_dependency/log",
    "//third_party/openssl/include",
  ]
  cflags = [
    "-Wall",
    "-Werror",
  ]
  sources = [
    "src/cert_manager.c",
    "src/cert_manager_app_cert_process.c",
    "src/cert_manager_auth_list_mgr.c",
    "src/cert_manager_auth_mgr.c",
    "src/cert_manager_check.c",
    "src/cert_manager_crypto_operation.c",
    "src/cert_manager_double_list.c",
    "src/cert_manager_file.c",
    "src/cert_manager_file_operator.c",
    "src/cert_manager_key_operation.c",
    "src/cert_manager_mem.c",
    "src/cert_manager_permission_check.cpp",
    "src/cert_manager_query.c",
    "src/cert_manager_service.c",
    "src/cert_manager_session_mgr.c",
    "src/cert_manager_status.c",
    "src/cert_manager_storage.c",
    "src/cert_manager_uri.c",
    "src/cm_event_process.c",
    "src/rbtree.c",
  ]

  deps = [
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main:cert_manager_standard_frameworks",
    "//base/security/crypto_framework/frameworks:crypto_framework_lib",
    "//third_party/openssl:libcrypto_shared",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "huks:libhukssdk",
    "ipc:ipc_core",
  ]
}
