# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("cert_manager_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("libcert_manager_hisysevent_wrapper_static") {
  subsystem_name = "security"
  part_name = "certificate_manager"
  public_configs = [ ":cert_manager_config" ]
  include_dirs = [
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main/common/include",
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main/os_dependency/cm_ipc/include",
    "//base/security/certificate_manager/services/cert_manager_standard/cert_manager_engine/main/core/include",
  ]
  sources = [
    "src/cm_report_wrapper.c",
    "src/hisysevent_wrapper.cpp",
  ]
  cflags = [
    "-Wall",
    "-Werror",
  ]
  defines = [
    "L2_STANDARD",
    "_CM_LOG_ENABLE_",
  ]
  external_deps = [ "hisysevent_native:libhisysevent" ]
  complete_static_lib = true
}
