# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("cert_manager_config") {
  include_dirs = [ "service" ]
}

ohos_static_library("libcert_manager_service_os_dependency_standard_static") {
  subsystem_name = "security"
  part_name = "certificate_manager"
  public_configs = [ ":cert_manager_config" ]
  include_dirs = [
    "//third_party/json/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//base/security/certificate_manager/services/cert_manager_standard/cert_manager_engine/main/core/include",
  ]

  defines = [
    "L2_STANDARD",
    "_CM_LOG_ENABLE_",
  ]
  sources = [
      "sa/cm_sa.cpp"
  ]
  deps = [
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main/os_dependency:libcert_manager_os_dependency_standard_static",
  ]
  public_deps = [ "//base/security/certificate_manager/services/cert_manager_standard/cert_manager_service/main/os_dependency/idl:libcm_service_idl_standard_static" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (support_jsapi) {
    sources += [ "sa/cm_event_observer.cpp" ]
    defines += [ "SUPPORT_COMMON_EVENT" ]
    external_deps += [
      "ability_base:want",
      "bundle_framework:appexecfwk_base",
      "common_event_service:cesfwk_innerkits",
      "os_account:os_account_innerkits",
      "c_utils:utils"
    ]

  }

  cflags_cc = [
    "-Wall",
    "-Werror",
  ]
  cflags = cflags_cc
  complete_static_lib = true
}
