# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("libcert_manager_service_os_dependency_standard_static") {
  subsystem_name = "security"
  part_name = "certificate_manager"
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  include_dirs = [
    "../../../cert_manager_engine/main/core/include",
    "../../../../../interfaces/innerkits/cert_manager_standard/main/include",
  ]

  defines = [
    "L2_STANDARD",
    "_CM_LOG_ENABLE_",
  ]
  sources = [ "sa/cm_sa.cpp" ]
  deps = [
    "../../../../../frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
    "../../../../../frameworks/cert_manager_standard/main/os_dependency:libcert_manager_log_mem_static",
    "idl:libcm_service_idl_standard_static",
  ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (support_jsapi) {
    sources += [ "sa/cm_event_observer.cpp" ]
    defines += [ "SUPPORT_COMMON_EVENT" ]
    external_deps += [
      "ability_base:want",
      "bundle_framework:appexecfwk_base",
      "common_event_service:cesfwk_innerkits",
      "os_account:os_account_innerkits",
    ]
  }

  cflags_cc = [
    "-Wall",
    "-Werror",
  ]
  cflags = cflags_cc
  complete_static_lib = true
}
