# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../../cert_manager.gni")

config("cert_manager_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("libcert_manager_sg_report_static") {
  subsystem_name = "security"
  part_name = "certificate_manager"
  public_configs = [ ":cert_manager_config" ]
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  include_dirs = [
    "../../../../../frameworks/cert_manager_standard/main/common/include",
    "../../../../../interfaces/innerkits/cert_manager_standard/main/include",
  ]
  deps = [ "../../../../../frameworks/cert_manager_standard/main/os_dependency:libcert_manager_log_mem_static" ]
  sources = [
    "src/cm_security_guard_info.c",
    "src/cm_security_guard_report.cpp",
  ]
  cflags = [
    "-Wall",
    "-Werror",
  ]
  defines = [ "_CM_LOG_ENABLE_" ]

  external_deps = [ "ipc:ipc_single" ]
  if (support_security_guard) {
    cflags += [ "-DSUPPORT_SECURITY_GUARD" ]
    cflags_cc = [ "-DSUPPORT_SECURITY_GUARD" ]
    external_deps += [ "security_guard:libsg_collect_sdk" ]
  }
  complete_static_lib = true
}
